--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=5000
-DATABASE_URI=mongodb+srv://user:password@cluster
+DATABASE_URI=mongodb+srv://P-Ease:M0ng0DBwithPeace@peace-cluster.uivdg.mongodb.net/
 DATABASE_NAME=library
 SECRET=secret
-EMBEDDING_URL=inserturl
+EMBEDDING_URL=https://86ad-41-216-98-178.ngrok-free.app/
 EMBEDDINGS_SOURCE=serverlessEndpoint
