--- a/server/.env
+++ b/server/.env
@@ -2,5 +2,5 @@ PORT=5000
 DATABASE_URI=mongodb+srv://P-Ease:M0ng0DBwithPeace@peace-cluster.uivdg.mongodb.net/
 DATABASE_NAME=library
 SECRET=secret
-EMBEDDING_URL=https://86ad-41-216-98-178.ngrok-free.app/
+EMBEDDING_URL=https://b8c7-41-216-98-178.ngrok-free.app/api/embeddings
 EMBEDDINGS_SOURCE=serverlessEndpoint
