Correcting the implementation

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=5000
-DATABASE_URI=mongodb+srv://user:password@cluster
+DATABASE_URI=please_replacethis_with_url
 DATABASE_NAME=library
 SECRET=secret
-EMBEDDING_URL=inserturl
+EMBEDDING_URL=provide_url_with_endpoint
 EMBEDDINGS_SOURCE=serverlessEndpoint
